Fri Feb 26 16:25:07 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/multicast.html:

          Updated documentation.

        * performance-tests/Bench/tests/spray/transport.ini:

          Updated transport configuration options; increased nak_interval
          to more easily identify NACK suppression.

Fri Feb 26 03:42:01 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/tests/spray:
        * performance-tests/Bench/tests/spray/pub-1.ini:
        * performance-tests/Bench/tests/spray/pub-2.ini:
        * performance-tests/Bench/tests/spray/pub-3.ini:
        * performance-tests/Bench/tests/spray/pub-4.ini:
        * performance-tests/Bench/tests/spray/sub.ini:
        * performance-tests/Bench/tests/spray/test-commands.txt:
        * performance-tests/Bench/tests/spray/transport.ini:
        * performance-tests/Bench/tools/mkpkg:

          Added test for measuring reliable multicast sample loss on a
          lossy network.

Thu Feb 25 23:45:55 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/Options.cpp:

          Ensure the message rate is interpreted consistently for both
          exponential and fixed types.
          Initialize and manage the default instance profile value.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Fix a logfile misnaming in the reliable subscription bound
          testing commands.

        * performance-tests/Bench/tools/mkpkg:

          Account for moving the original scenario configurations to a
          sub-directory.

Thu Feb 25 20:35:25 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * etc/multicast.conf:
        * etc/tcp.conf:
        * etc/udp.conf:

          Added default svc.conf files for supported transports.

Thu Feb 25 17:26:34 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/tests.txt: